2007-05-08  Vincent Untz  <vuntz@gnome.org>

	* configure.in: add new --with-clock-time-utility configure parameter

2007-05-01  Changwoo Ryu  <cwryu@debian.org>

	* configure.in: Removed help/ko/* output for gnome-doc-utils
	migration.

2007-04-10  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.18.2.

==================== 2.18.1 ====================

2007-04-10  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* README:
	* configure.in: version 2.18.1

2007-03-12  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.18.1.

==================== 2.18.0 ====================

2007-03-12  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* README:
	* configure.in: version 2.18.0

2007-03-06  Vincent Untz  <vuntz@gnome.org>

	* configure.in: require pango 1.15.4 for the clock, generate
	gnome-panel/gnome-panel.desktop

2007-02-26  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.18.0.

==================== 2.17.92 ====================

2007-02-26  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* README:
	* configure.in: version 2.17.92

2007-02-20  Kjartan Maraas  <kmaraas@gnome.org>

	* Makefile.am: Dist MAINTAINERS.

2007-02-18  Vincent Untz  <vuntz@gnome.org>

	* configure.in: require pango 1.15.4 for voodoo magic (vertical text
	with automatic gravity)

2007-02-17  Vincent Untz  <vuntz@gnome.org>

	* */.cvsignore: kill

2007-02-17  Vincent Untz  <vuntz@gnome.org>

	* configure.in: check for gconf for libpanel-applet
	Fix bug #382307

2007-02-12  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 2.17.92.

==================== 2.17.91 ====================

2007-02-12  Vincent Untz  <vuntz@gnome.org>

	* NEWS:
	* README:
	* configure.in: version 2.17.91

2007-01-30  Brian Cameron  <brian.cameron@sun.com>

	* configure.in:  Now add libedataserver to the CLOCK_LIBS to
	  fix compile issue on Solaris.  Also, good for pkg-config to
	  check to make sure the right version of edataserver is on