@@ -1,3 +1,13 @@
+2007-05-12  Vincent Untz  <vuntz@gnome.org>
+
+	* icons/16x16/Makefile.am (update-icon-cache): 
+	* icons/24x24/Makefile.am (update-icon-cache): 
+	* icons/22x22/Makefile.am (update-icon-cache): 
+	* icons/32x32/Makefile.am (update-icon-cache):
+	* icons/scalable/Makefile.am (update-icon-cache): fix
+	gtk-update-icon-cache for uninstall-hook.
+	Fix bug #436213. Patch by Brian Pepple <bpepple@fedoraproject.org>
+
 2007-05-08  Vincent Untz  <vuntz@gnome.org>
 
 	* configure.in: add new --with-clock-time-utility configure parameter
